# PIPICO_Calculation

./: .gitignore  Cargo.toml  Readme.md  example.py  pipico_test.py  pyproject.toml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
tests/: test_pipico.py
