[package]
name = "pipico"
version = "0.1.0"
authors = ["BenMoon <brombh@desy.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#name = "pipico"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ndhistogram = "0.8.0"
ndarray = {version="0.15.4", features=["rayon"]}
ndarray-stats = "0.5.0"
noisy_float = "0.2.0"
itertools = "0.10.3"
rand = "0.8.5"
ndarray-rand = "0.14.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
numpy = "*"
rayon = "1.6.1"
polars = {version="0.26.1", features = ["lazy", "parquet", "ndarray"]}
pyo3-polars = {version = "*"}
num_cpus = "*"

[build-dependencies]
pyo3-build-config = "*"

[dev-dependencies]
criterion = "0.4.0"
memuse = "*"

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false