[package]
name = "pipico"
version = "0.1.0"
authors = ["BenMoon <brombh@desy.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#name = "pipico"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ndhistogram = "0.8.0"
ndarray = {version="0.15.4", features=["rayon"]}
ndarray-stats = "0.5.0"
noisy_float = "0.2.0"
itertools = "0.10.3"
rand = "0.8.5"
ndarray-rand = "0.14.0"
pyo3 = { version = "0.18", features = ["extension-module"] }
numpy = "*"
rayon = "1.7"
polars = {version="0.28", features = ["ndarray"]}
#pyo3-polars = {version = "*"}
num_cpus = "*"

[build-dependencies]
pyo3-build-config = "*"

[dev-dependencies]
criterion = "0.5"
#memuse = "*"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
debug = false      # Debug symbols for our profiler.
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code. 

[profile.bench]
debug = true        # Debug symbols for our profiler.
lto = false         # Link-time optimization.
codegen-units = 16  # Slower compilation but faster code. 

[[bench]]
name = "my_benchmark"
harness = false